--- a/src/app/combi-checker/combi-checker.component.scss
+++ b/src/app/combi-checker/combi-checker.component.scss
@@ -1,7 +1,49 @@
-    .full-width {
-      width: 100%;
-      margin-bottom: 16px;
-    }
-    mat-list-item {
-      font-family: monospace;
-    }
+@use '@angular/material' as mat;
+
+// Customize the entire app. Change :root to your selector if you want to scope the styles.
+:root {
+  @include mat.button-overrides((
+    filled-container-color: orange,
+    filled-label-text-color: red,
+  ));
+}    
+    
+.full-width {
+    width: 100%;
+    margin-bottom: 16px;
+}
+mat-list-item {
+    font-family: monospace;
+}
+
+section {
+  display: table;
+}
+
+.example-label {
+  display: table-cell;
+  font-size: 14px;
+  margin-left: 8px;
+  min-width: 120px;
+}
+
+.example-button-row {
+  display: table-cell;
+  max-width: 600px;
+}
+
+.example-button-row .mat-mdc-button-base {
+  margin: 8px 8px 8px 0;
+}
+
+.example-flex-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.example-button-container {
+  display: flex;
+  justify-content: center;
+  width: 140px;
+}
